# bear

./: .env.enc  .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  example.env  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  working.ipynb
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.github/workflows/: build-container.yml  docs-deploy.yml
DOCS/: index.html
api/: Dockerfile
api_usage/: api_usage.ipynb  index.html
bear/: __init__.py  api.py  config.py  crawler.py  db.py  embedding.py  ingest.py  init.py  model.py  models.py  reranker.py  search.py  settings.py  utils.py
bear/api/: Dockerfile  main.py
bear/mcp/: Dockerfile  main.py
docs/: DOCS.md  api_usage.ipynb  getting-started.md  getting_started.md  index.md  usage.md
docs/examples/: milvus_engine_access.ipynb  reranker.ipynb
docs/notebooks/: api_usage.ipynb  benchmark_inference_servers.ipynb
docs/reference/: api.md  config.md  crawler.md  db.md  docs.md  embedding.md  ingest.md  model.md  reranker.md  search.md
examples/embedder/: index.html
getting-started/: index.html
getting_started/: index.html
notebooks/: benchmark_inference_servers.ipynb  embedder.ipynb
notebooks/api_usage/: index.html
notebooks/benchmark_inference_servers/: index.html
notebooks/embedder/: embedder.ipynb  index.html
openalex_search/: api.py  common.py  config.py  crawler.py  db.py  embedding.py  ingest.py  search.py  settings.py  staging.py
reference/api/: index.html
reference/config/: index.html
reference/crawler/: index.html
reference/db/: index.html
reference/docs/: index.html
reference/embedding/: index.html
reference/ingest/: index.html
reference/model/: index.html
reference/search/: index.html
scripts/: cci_snippets.sh  clone_openalex.sh
search/: search_index.json
tests/: conftest.py  test_api.py  test_config.py  test_crawler.py  test_db.py  test_embedding.py
usage/: index.html
