[project]
name = "bear"
version = "0.1.0"
description = "Backend for Embedded Academic Resources (BEAR)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "ipython-sql>=0.5.0",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymilvus>=2.5.14",
    "python-dotenv>=1.1.1",
    "tenacity>=9.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "bear/**/*.py",
]

[dependency-groups]
dev = [
    "ipykernel",
    "pytest",
    "tqdm",
]
