[project]
name = "bear"
version = "0.1.0"
description = "Backend for Embedded Academic Resources (BEAR)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=6.1.0",
    "fastapi[standard]>=0.116.1",
    "fastmcp>=2.11.3",
    "httpx>=0.28.1",
    "mkdocs-material>=9.6.15",
    "numexpr>=2.11.0",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymilvus>=2.5.14",
    "python-dotenv>=1.1.1",
    "slack-sdk>=3.36.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bear"
module-root = ""

[dependency-groups]
dev = [
    "ipython-sql>=0.5.0",
    "faker>=37.4.2",
    "ipykernel",
    "pytest",
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-jupyter>=0.25.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-material>=9.6.15",
]

[project.scripts]
bear-api = "bear.api.main:main"
bear-mcp = "bear.mcp.main:main"
